<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <Button
            android:id="@+id/BtConnect"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="75dp"
            android:layout_centerHorizontal="true"
            android:text="@string/bt_connect"
            android:textSize="12sp" />



        <TextView
            android:id="@+id/TextBaseMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/BtConnect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/base_movement_name" />

        <SeekBar
            android:id="@+id/SeekBarBase"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextBaseMovement"
            android:layout_centerHorizontal="true"
            android:max="200"
            android:min="0"
            android:progress="100" />

        <TextView
            android:id="@+id/TextSeekBarBaseProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/SeekBarBase"
            android:layout_alignTop="@id/SeekBarBase"
            android:text="@string/base_movement_progress" />




        <TextView
            android:id="@+id/TextArmMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SeekBarBase"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/arm_movement_name" />

        <SeekBar
            android:id="@+id/SeekBarArm"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextArmMovement"
            android:layout_centerHorizontal="true"
            android:max="15"
            android:min="1"
            android:progress="1"/>

        <TextView
            android:id="@+id/TextSeekBarArmProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/SeekBarArm"
            android:layout_alignTop="@id/SeekBarArm"
            android:text="@string/arm_movement_progress" />




        <TextView
            android:id="@+id/TextFireMovement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SeekBarArm"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/fire_movement_name" />

        <SeekBar
            android:id="@+id/SeekBarFire"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/TextFireMovement"
            android:layout_centerHorizontal="true"
            android:max="200"
            android:min="0"
            android:progress="100"/>

        <TextView
            android:id="@+id/TextSeekBarFireProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/SeekBarFire"
            android:layout_alignTop="@id/SeekBarFire"
            android:text="@string/fire_movement_progress" />




        <Button
            android:id="@+id/ButtonUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SeekBarFire"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/up_movement_name" />

        <Button
            android:id="@+id/ButtonDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ButtonUp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/down_movement_name" />

        <Button
            android:id="@+id/ButtonLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ButtonUp"
            android:layout_toStartOf="@id/ButtonUp"
            android:layout_centerVertical="true"
            android:text="@string/left_movement_name" />

        <Button
            android:id="@+id/ButtonRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ButtonUp"
            android:layout_toEndOf="@id/ButtonUp"
            android:layout_centerVertical="true"
            android:text="@string/right_movement_name" />


        <Button
            android:id="@+id/ButtonFire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ButtonDown"
            android:layout_toEndOf="@id/ButtonDown"
            android:layout_marginStart="-150dp"
            android:layout_marginTop="30dp"
            android:text="@string/fire_movement_name" />

        <Button
            android:id="@+id/ButtonFireAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ButtonDown"
            android:layout_toStartOf="@id/ButtonDown"
            android:layout_marginEnd="-150dp"
            android:layout_marginTop="30dp"
            android:text="@string/fire_all_movement_name" />




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>